feat: :lock: szerveroldalon állítsuk a kép dátumot
